--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
 }
 
 test {
